@@ -19,14 +19,17 @@ package craftedMods.lotr.recipes.api.utils;
 import java.lang.reflect.Field;
 import java.util.*;
 
+import org.apache.commons.lang3.tuple.Pair;
+
 import craftedMods.recipes.api.utils.RecipeHandlerUtils;
 import craftedMods.recipes.base.*;
 import lotr.client.gui.LOTRGuiAlloyForge;
 import lotr.common.item.LOTRItemMug;
 import lotr.common.recipe.*;
 import lotr.common.tileentity.LOTRTileEntityAlloyForgeBase;
+import net.minecraft.block.Block;
 import net.minecraft.entity.EntityList;
-import net.minecraft.item.ItemStack;
+import net.minecraft.item.*;
 import net.minecraft.item.crafting.IRecipe;
 import net.minecraftforge.oredict.OreDictionary;
 
@@ -38,6 +41,8 @@ public class LOTRRecipeHandlerUtils {
 
 	private static Field catalystField;
 	private static Field theForgeField;
+	private static Field treasureBlockField;
+	private static Field ingotItemField;
 
 	public static ItemStack[] getPoison() {
 		if (LOTRRecipeHandlerUtils.poison == null) {
@@ -121,6 +126,23 @@ public class LOTRRecipeHandlerUtils {
 
 	public static String getUnlocalizedEntityName(Class<?> entityClass) {
 		return EntityList.classToStringMapping.get(entityClass).toString().replace("lotr.", "");
+	}
+
+	public static Pair<Block, Item> getTreasurePileRecipeItems(LOTRRecipesTreasurePile recipe) {
+		try {
+			if (treasureBlockField == null || ingotItemField == null) {
+				treasureBlockField = LOTRRecipesTreasurePile.class.getDeclaredField("treasureBlock");
+				ingotItemField = LOTRRecipesTreasurePile.class.getDeclaredField("ingotItem");
+
+				treasureBlockField.setAccessible(true);
+				ingotItemField.setAccessible(true);
+			}
+			return Pair.of((Block) treasureBlockField.get(recipe), (Item) ingotItemField.get(recipe));
+		} catch (Exception e) {
+			System.err.print("Couldn't load the poisoned weapon recipe: ");
+			e.printStackTrace();
+		}
+		return null;
 	}
 
 }
